<?xml version="1.0" encoding="utf-8"?>
<!--
/* Copyright 2014, John Persano
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/title_general">

        <uk.org.crimetalk.prefs.ThemePreference
            android:key="dark_theme"
            android:title="@string/title_dark_theme"
            android:defaultValue="false"/>

        <CheckBoxPreference
            android:key="load_in_browser"
            android:title="@string/title_local_browser"
            android:summary="@string/summary_local_browser"
            android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_advanced">

        <uk.org.crimetalk.prefs.NumberPickerPreference
            android:key="timeout"
            android:title="@string/title_network_timeout"
            android:summary="@string/summary_network_timeout"
            android:dialogTitle="@string/dialog_title_network_timeout"
            android:defaultValue="10"/>

    </PreferenceCategory>

</PreferenceScreen>