<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 John Persano
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:scrollbarStyle="outsideOverlay"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:padding="8dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/icon_description"
            android:src="@drawable/img_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textColor="?android:textColorPrimary"
            android:textSize="28sp"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="8dp"
            android:text="@string/developed_by"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="8dp"
            android:text="@string/licensed_under"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/libraries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/selector_red"
            android:text="@string/button_open_source_libraries"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/github"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/selector_red"
            android:text="@string/button_view_project_source"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:padding="8dp"
                android:text="@string/version_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="12sp" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>